fixed missing border animation @addTask

--- a/css/addtask.css
+++ b/css/addtask.css
@@ -123,6 +123,7 @@ select {
     transition: all 0.3s ease-out;
     font-family: 'PT Sans', sans-serif;
     padding: 8px;
+    outline: none;
     
    
     min-width: 100%;
@@ -200,6 +201,7 @@ textarea{
     font-size: 20px;
     transition: all 0.3s linear;
     font-family: 'PT Sans', sans-serif;
+    outline: none;
 }
 
 
